Added bunch of stuff
Populated the README.md file, added icon to the exe, changed exe from installer to an app-image bundle, closed BufferedReader after reading from env(rookie mistake).